--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   faker: ^2.1.0
+  supabase_flutter: ^2.5.3
 
 dev_dependencies:
   flutter_test:
