--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   faker: ^2.1.0
   supabase_flutter: ^2.5.3
+  crypt: ^4.3.1
 
 dev_dependencies:
   flutter_test:
