feat: add bottom nav bar

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flashy_tab_bar2: ^0.0.10
+  dot_navigation_bar:
+  awesome_bottom_bar: any
+
     
   
 
