--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_bloc: ^8.1.5
   collection: ^1.18.0
   flutter_secure_storage: ^9.2.1
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
