--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,11 @@ name: anony_tweet
 description: "A new Flutter project for creating anonymous tweet app."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "lib/assets/logo/Logo.png"
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +23,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.5 <4.0.0'
+  sdk: ">=3.2.5 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,10 +39,6 @@ dependencies:
   awesome_bottom_bar: any
   intl: ^0.19.0
 
-    
-  
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
@@ -49,6 +49,7 @@ dependencies:
   collection: ^1.18.0
   flutter_secure_storage: ^9.2.1
   rxdart: ^0.27.7
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -69,13 +70,12 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
   assets:
-      - lib/assets/logo/Logo.png
+    - lib/assets/logo/Logo.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
