--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_secure_storage: ^9.2.1
   rxdart: ^0.27.7
   flutter_launcher_icons: ^0.13.1
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
