--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   shared_preferences: ^2.2.3
   image_picker: ^1.1.2
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
