--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <application android:requestLegacyExternalStorage="true"></application>
     <application
         android:label="anony_tweet"
         android:name="${applicationName}"
