--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   shared_preferences: ^2.2.3
   image_picker: ^1.1.2
   cached_network_image: ^3.3.1
+  carousel_slider: ^4.2.1
+  http: ^1.2.1
+  image_gallery_saver: ^2.0.3
 
 dev_dependencies:
   flutter_test:
