--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,7 +81,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - lib/assets/logo/Logo.png
+    - lib/assets/logo/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
