--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application android:requestLegacyExternalStorage="true"></application>
     <application
-        android:label="anony_tweet"
+        android:label="PCUFess"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
