--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,9 @@ flutter_icons:
   ios: true
   image_path: "lib/assets/logo/Logo.png"
 
+launcher_name: 
+  default: "1234567890"
+
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
 # followed by an optional build number separated by a +.
@@ -56,6 +59,7 @@ dependencies:
   carousel_slider: ^4.2.1
   http: ^1.2.1
   image_gallery_saver: ^2.0.3
+  launcher_name: ^1.0.2
 
 dev_dependencies:
   flutter_test:
