fix: PCUFess launcher name

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ flutter_icons:
   image_path: "lib/assets/logo/Logo.png"
 
 launcher_name: 
-  default: "1234567890"
+  default: "PCUFess"
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
